--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     ]
   },
   "dependencies": {
+    "@react-three/drei": "^4.1.8",
+    "@react-three/fiber": "^6.0.14",
     "next": "latest",
+    "next-transpile-modules": "^6.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "three": "^0.127.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
