--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     ]
   },
   "dependencies": {
-    "@react-three/drei": "^4.1.8",
-    "@react-three/fiber": "^6.0.14",
+    "@react-three/drei": "^5.3.1",
+    "@react-three/fiber": "^6.2.2",
     "next": "latest",
     "next-transpile-modules": "^6.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.32.0",
     "styled-components": "^5.2.1",
     "three": "^0.127.0"
   },
