try to fix netlify deployment

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
-    "test": "jest"
+    "test": "jest",
+    "export": "next export"
   },
   "husky": {
     "hooks": {
