--- a/package.json
+++ b/package.json
@@ -26,38 +26,38 @@
     ]
   },
   "dependencies": {
-    "@react-three/drei": "^5.3.1",
-    "@react-three/fiber": "^6.2.2",
-    "next": "latest",
-    "next-transpile-modules": "^6.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-intersection-observer": "^8.32.0",
-    "styled-components": "^5.2.1",
+    "@react-three/drei": "^5.3.4",
+    "@react-three/fiber": "^6.2.3",
+    "next": "^11.0.1",
+    "next-transpile-modules": "^6.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.2",
+    "styled-components": "^5.3.3",
     "three": "^0.127.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.13",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "autoprefixer": "^10.2.5",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^14.17.33",
+    "@types/react": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.0",
     "babel-jest": "^26.6.3",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.6",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.27.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.5.3",
-    "postcss": "^8.2.8",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.4",
-    "typescript": "^4.1.3"
+    "jest-watch-typeahead": "^0.6.5",
+    "lint-staged": "^10.5.4",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4"
   }
 }
