--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -15,13 +19,28 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@views/*": ["src/views/*"],
       "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
+      "@views/*": ["src/views/*"],
+      "@patterns/*": ["src/patterns/*"],
+      "@typings/*": ["src/types/*"],
+      "@identity/*": ["src/identity/*"],
+      "@containers/*": ["src/containers/*"],
       "@lib/*": ["src/lib/*"],
-      "@styles/*": ["src/styles/*"]
-    }
+      "@hooks/*": ["src/hooks/*"],
+      "@utils/*": ["./util/*"],
+      "@public/*": ["./public/*"]
+    },
+    "incremental": true
   },
-  "exclude": ["node_modules", ".next", "out"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    "out"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js"
+  ]
 }
