--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@react-three/drei": "^5.3.4",
     "@react-three/fiber": "^6.2.3",
+    "lottie-web": "^5.8.1",
     "next": "^11.0.1",
     "next-transpile-modules": "^6.4.1",
     "react": "^17.0.2",
