--- a/package.json
+++ b/package.json
@@ -28,14 +28,20 @@
   "dependencies": {
     "@react-three/drei": "^5.3.4",
     "@react-three/fiber": "^6.2.3",
+    "axios": "^0.24.0",
+    "downshift": "^6.1.7",
+    "lodash": "^4.17.21",
     "lottie-web": "^5.8.1",
     "next": "^11.0.1",
     "next-transpile-modules": "^6.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.8",
     "react-intersection-observer": "^8.32.2",
+    "react-textarea-autosize": "^8.3.3",
     "styled-components": "^5.3.3",
-    "three": "^0.127.0"
+    "three": "^0.127.0",
+    "what-input": "^5.2.10"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
