--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "npm run lint",
-      "npm run format"
+      "npm run format",
+      "npm run lint"
     ]
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@react-three/fiber": "^6.2.3",
     "axios": "^0.24.0",
     "downshift": "^6.1.7",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "lottie-web": "^5.8.1",
     "next": "^11.0.1",
@@ -38,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
     "react-intersection-observer": "^8.32.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-textarea-autosize": "^8.3.3",
     "styled-components": "^5.3.3",
     "three": "^0.127.0",
