--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-textarea-autosize": "^8.3.3",
     "styled-components": "^5.3.3",
     "three": "^0.127.0",
+    "use-debounce": "^7.0.1",
     "what-input": "^5.2.10"
   },
   "devDependencies": {
